[package]
name = "read-sum"
version = "0.1.0"
authors = ["blackanger <blackanger.z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.23"

# https://doc.rust-lang.org/cargo/guide/project-layout.html
[[bin]]
name = "refact1"
[[bin]]
name = "refact2"
[[bin]]
name = "refact3"
[[bin]]
name = "refact4"
[[bin]]
name = "refact5"
